kubernetes/media/navilist/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: navilist
  namespace: navilist
spec:
  ports:
    - port: 3000
      protocol: TCP
      targetPort: http-tcp
  selector:
    app: navilist
  type: ClusterIP
