kubernetes/media/navilist/ingress.yml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: navilist-lan-only
  namespace: navilist
spec:
  ipAllowList:
    sourceRange:
      - 192.168.0.0/16
      - 10.0.10.0/24

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: navilist
  namespace: navilist
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`navilist.lan.juusoleinonen.fi`)
      priority: 10
      middlewares:
        - name: navilist-lan-only
      services:
        - name: navilist
          port: 3000
  tls:
    secretName: navilist-certificate
